Fix fill-currentColor in dark mode

--- a/packages/styles/_sass/pm-styles/_pm-dark-theme.scss
+++ b/packages/styles/_sass/pm-styles/_pm-dark-theme.scss
@@ -150,6 +150,8 @@ summary {
 .fill-global-grey,
 .fill-black { fill: $white; } // dirty, I know
 
+.fill-currentColor { fill: currentColor; } // to avoid some issues
+
 
 // global
 :root {
